<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Explorer helper for VeloViewer</string>
    <string name="launcher_name">VV Explorer</string>
    <string name="btn_label_explorer">Explorer</string>
    <string name="btn_label_rides">Rides</string>
    <string name="btn_label_grid">Grid</string>

    <!-- Preferences -->
    <string name="key_color_explorer">color_explorer_fill</string>
    <string name="key_color_cluster">color_cluster_fill</string>
    <string name="key_color_max_square">color_max_square</string>
    <string name="key_color_grid">color_grid</string>
    <string name="key_color_rides">color_rides</string>
    <string name="key_color_recorded_track">color_recorded_track</string>
    <string name="key_color_recorded_tiles">color_recorded_tiles</string>
    <string name="key_map_style">map_style</string>
    <string name="key_heatmap_type">heatmap_type</string>
    <string name="key_heatmap_style">heatmap_style</string>

    <!-- Tracking -->
    <string name="action_pause">Pause</string>
    <string name="action_stop">Stop</string>
    <string name="action_resume">Resume</string>
    <string name="action_start">Start</string>
    <string name="action_clear">Clear</string>
    <string name="title_record_dialog">Track record</string>

    <!-- Settings -->
    <string name="sync_settings">Sync tiles and rides</string>
    <string name="style_settings">Style settings</string>

    <string-array name="map_style_entries">
        <item>Streets</item>
        <item>Dark</item>
        <item>Light</item>
        <item>Bright</item>
        <item>Outdoors</item>
        <item>Satellite</item>
        <item>Satellite streets</item>
        <item>DigitalGlobe Premium</item>
        <item>OpenCycleMap</item>
        <item>OpenStreetMap Carto</item>
    </string-array>
    <string name="mapbox_style_bright">mapbox://styles/mapbox/bright-v9</string>
    <string-array name="map_style_values">
        <item>@string/mapbox_style_mapbox_streets</item>
        <item>@string/mapbox_style_dark</item>
        <item>@string/mapbox_style_light</item>
        <item>@string/mapbox_style_bright</item>
        <item>@string/mapbox_style_outdoors</item>
        <item>@string/mapbox_style_satellite</item>
        <item>@string/mapbox_style_satellite_streets</item>
        <item>asset://dg_premium_style.json</item>
        <item>asset://opencyclemap_style.json</item>
        <item>asset://openstreetmap_style.json</item>
    </string-array>

    <string-array name="heatmap_type_entries">
        <item>All</item>
        <item>Rides</item>
        <item>Runs</item>
        <item>Water</item>
        <item>Winter</item>
    </string-array>
    <string name="heatmap_type_default_value">ride</string>
    <string-array name="heatmap_type_values">
        <item>all</item>
        <item>ride</item>
        <item>run</item>
        <item>water</item>
        <item>winter</item>
    </string-array>
    
    <string-array name="heatmap_style_entries">
        <item>Hot</item>
        <item>Blue</item>
        <item>Gray</item>
        <item>Blue-Red</item>
    </string-array>
    <string name="heatmap_style_default_value">bluered</string>
    <string-array name="heatmap_style_values">
        <item>hot</item>
        <item>blue</item>
        <item>gray</item>
        <item>bluered</item>
    </string-array>
</resources>
