<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.anisart.vv.MapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:mapbox_myLocation="true"
                app:mapbox_styleUrl="mapbox://styles/mapbox/outdoors-v10"
                app:mapbox_uiRotateGestures="false"
                app:mapbox_uiTiltGestures="false"
                app:mapbox_uiZoomControls="true" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/myLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_my_location"
                app:layout_anchor="@id/mapView"
                app:layout_anchorGravity="bottom|right|end" />

            <TextView
                android:id="@+id/debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/mapView"
                app:layout_anchorGravity="top|left|start" />

        </android.support.design.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/explorerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/btn_label_explorer"
                android:textOn="@string/btn_label_explorer" />

            <ToggleButton
                android:id="@+id/ridesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/btn_label_rides"
                android:textOn="@string/btn_label_rides" />

            <ToggleButton
                android:id="@+id/gridButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/btn_label_grid"
                android:textOn="@string/btn_label_grid" />

        </LinearLayout>

    </LinearLayout>

    <fragment
        android:name="ru.anisart.vv.MapSettingsFragment"
        android:id="@+id/map_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"/>

</FrameLayout>